css/default.css
/* ... */
.image-wrapper,
.image-wrapper::after {
    width: fit-content;
}
.image-wrapper.focusable:hover::after {
    opacity: 1.0;
}

/**************/
/* POP-FRAMES */
/**************/

.popframe .popframe-title-link::after {
    display: none;
}

.popframe .popframe-title-link-archived::after {
    content: none;
}

.popframe .popframe-title .separator {
    margin: 0 0.5em;
}

/*=-------------------=*/
/*= POP-FRAME CONTENT =*/
/*=-------------------=*/
/*  Adjustments for styles in pop-frames.
    */

.popframe-body .TOC {
    margin: 1.25em 0 0 0;
    padding: 0.5em 0.5em 0.75em 0.75em;

    /*  The following three properties are to prevent both overlap and
        margin-collapse of the TOC when there’s a floated thumbnail figure
        that juts down below the abstract text.
     */
    clear: both;
    display: inline-block;
    width: calc(100% - 1.25em);    /* Subtract side padding. */
}

.popframe-body .TOC a:hover::after {
    margin: 0;
    bottom: unset;
    font-size: inherit;
    opacity: unset;
}

.popframe-body ul,
.popframe-body ol {
    overflow: unset;
}

.popframe-body p + p,
.popframe-body p + figure[class^='float-'] + p,
.popframe-body div[class^='drop-cap-'] + p,
.popframe-body .abstract.scrape-abstract-not + p {
    text-indent: 1.75em;
}

.popframe-body p + ul,
.popframe-body p + ol {
    margin-top: 0.2em;
    margin-bottom: 0.2em;
}

.popframe-body li,
.popframe-body li p {
    text-align: left;
}

.popframe-body h1,
.popframe-body h2,
.popframe-body h3,
.popframe-body h4,
.popframe-body h5,
.popframe-body h6 {
    margin-left: 0;
}
.popframe-body h1 a:link,
.popframe-body h2 a:link,
.popframe-body h3 a:link,
.popframe-body h4 a:link,
.popframe-body h5 a:link,
.popframe-body h6 a:link {
    background-image: none;
    text-shadow: none;
}

.popframe-body blockquote {
    margin: 1em 0;
}

.popframe-body > figure:only-child {
    margin: 0;
    max-width: unset;
}

.popframe-body.local-page > blockquote:first-child,
.popframe-body.local-page > .table-wrapper:first-child,
.popframe-body.local-page > div.sourceCode:first-child pre {
    margin-top: calc(3em/9);
}
.popframe-body.local-page > blockquote:last-child,
.popframe-body.local-page > .table-wrapper:last-child,
.popframe-body.local-page > div.sourceCode:last-child pre {
    margin-bottom: calc(1em/9);
}

.popframe-body pre {
    max-height: unset;
}

.popframe-body > hr:first-child {
    display: none;
}

.popframe-body #footnotes > hr:first-child,
.popframe-body #footnotes > hr:first-child + a.section-self-link {
    display: none;
}

.popframe-body #footnotes li > blockquote:nth-last-child(2),
.popframe-body #footnotes li > pre:nth-last-child(2),
.popframe-body #footnotes li > .sourceCode:nth-last-child(2) {
    margin-bottom: 2em;
}

.popframe-body .footnotes .footnote-back {
    vertical-align: text-top;
}

/*  Drop caps in pop-frames.
    */
.popframe-body .drop-cap-goudy > p,
.popframe-body .drop-cap-yinit > p,
.popframe-body .drop-cap-de-zs > p,
.popframe-body .drop-cap-cheshire > p,
.popframe-body .drop-cap-kanzlei > p {
    text-indent: 0;
}
.popframe-body .drop-cap-goudy > p::first-letter {
    font-size: 6.5em;
}
.popframe-body .drop-cap-yinit > p::first-letter {
    font-size: 5.125em;
}
.popframe-body .drop-cap-de-zs > p::first-letter {
    font-size: 6.375em;
}
.popframe-body .drop-cap-cheshire > p::first-letter {
    font-size: 6.375em;
}
.popframe-body .drop-cap-kanzlei > p::first-letter {
    font-size: 6.625em;
}

.popframe-body > [class^='drop-cap-']:last-child {
    overflow: hidden;
}

/*  Margin notes in pop-frames.
    */
.popframe-body .marginnote {
    display: initial;
}

/*=-----------------=*/
/*= POP-FRAME TYPES =*/
/*=-----------------=*/

/*┌──────────────────────┐*/
/*│ Aux-link pop-frames. │*/
/*└──────────────────────┘*/

.popframe-body ul.aux-links-list {
    margin: 0.75em 0 0.5em 0;
    padding: 0 0 0 1.75em;
}

/*┌────────────────────────┐*/
/*│ Annotation pop-frames. │*/
/*└────────────────────────┘*/

.popframe-body > .annotation:only-child > p.data-field.title:only-of-type {
    font-size: 1.125em;
    line-height: 1.35;
    margin-bottom: 0.375em;
}

.popframe-body > div.annotation > div.annotation-abstract > .collapse {
    margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);
    margin-right: -2px;
    padding-right: 0.5em;
    border-right: 1px solid var(--GW-TOC-border-color);
}
.popframe-body > div.annotation > div.annotation-abstract > .collapse:last-child {
    margin-bottom: 0.25em;
    border-bottom: 1px solid var(--GW-TOC-border-color);
}

/*┌──────────────────────┐*/
/*│ Footnote pop-frames. │*/
/*└──────────────────────┘*/

.popframe-body.footnote > blockquote:last-child {
    margin-bottom: calc(1em/9);
}

/*┌──────────────────────────────┐*/
/*│ Citation context pop-frames. │*/
/*└──────────────────────────────┘*/

/*┌──────────────────┐*/
/*│ Code pop-frames. │*/
/*└──────────────────┘*/

.popframe.local-code-file .popframe-content-view {
    padding: 0;
}

.popframe-body.local-code-file div.sourceCode {
    height: 100%;
}
.popframe-body.local-code-file div.sourceCode.truncated {
    height: calc(100% - 1.75em);
}
.popframe-body.local-code-file div.sourceCode.truncated + p {
    font-family: var(--GW-sans-serif-font-stack);
    height: 1.75em;
    text-align: center;
}
.popframe-body.local-code-file pre {
    height: 100%;
    margin: 0;
    border: none;
    max-height: unset;
}

/*  “Loading failed” message.
    */
.popframe.local-code-file.loading-failed::after {
    content: "File not found.";
}

/*  “Raw code” pop-frames.
    */
.popframe-body.local-code-file pre.raw-code {
    white-space: pre-wrap;
}
.popframe-body.local-code-file pre.raw-code code {
    word-break: break-word;
    padding-left: 2px;
    padding-right: 2px;
}
/* ... */

